--- a/src/main/resources/templates/main/index.html
+++ b/src/main/resources/templates/main/index.html
@@ -17,6 +17,7 @@
         <a href="#" class="icon solid fa-home"><span>Home</span></a>
         <a href="#skills" class="icon solid fa-folder"><span>Skills</span></a>
         <a href="#projects" class="icon solid fa-file-code"><span>Projects</span></a>
+        <a href="#certiclass" class="icon solid fa-book-open"><span>Certi&Class</span></a>
         <a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a>
         <!--<a href="" class="icon brands fa-twitter"><span>Twitter</span></a>-->
     </nav>
@@ -30,7 +31,7 @@
                 <h1>Suna Kim</h1>
                 <p>Backend Developer</p>
             </header>
-            <a href="#work" class="jumplink pic">
+            <a href="#projects" class="jumplink pic">
                 <span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
                 <img src="images/me.jpeg" alt="" />
             </a>
@@ -88,51 +89,62 @@
         </article>
 
 
+        <!-- projects -->
         <article id="projects" class="panel">
             <header>
                 <h2>Projects</h2>
             </header>
-            <p>
-                백엔드 개발자로서 JAVA를 기반으로 다져 실력을 향상해왔습니다. 하지만 JAVA에만 국한되지 않고 제가 할 수 있는 모든 경험을 해보고자 하며
-                프론트엔드 및 서버도 추가로 공부하여 저의 가능성을 넓혀가는 것에 흥미를 붙였고, 그로인해 많은 습득을 하게 되었습니다.
-            </p>
             <section>
                 <div class="row">
-                    <div class="col-4 col-6-medium col-12-small">
-                        <a href="#" class="image fit"><img src="images/java.png" alt=""></a>
+                    <h4>광고 문의 인바운드 웹앱 개발 프로젝트</h4>
+                    <table>
+
+                    </table>
+                </div>
+            </section>
+        </article>
+
+        <!-- certi and class -->
+        <article id="certiclass" class="panel">
+            <header>
+                <h2>Certificate & Study</h2>
+            </header>
+            <p>
+                업무에 도움이 되고, 한층 지식을 업그레이드 하고자 자격증 취득에 몰두하였습니다. 자격증만이 아니라 다른 교육들도 수강하여 지식의 폭을 넓혀가고자 합니다.
+            </p>
+            <section>
+                <div>
+                    <h4>• Certificate</h4>
+                </div>
+
+                <div class="row">
+                    <div class="col-12 col-12-medium col-12-small">
+                        AWS Certified Cloud Practitioner certificate (2022.07 취득)
                     </div>
-                    <div class="col-4 col-6-medium col-12-small">
-                        <a href="#" class="image fit"><img src="images/spring.png" alt=""></a>
+                    <div class="col-12 col-12-medium col-12-small">
+                        SQLD(2022.12 취득)
                     </div>
-                    <div class="col-4 col-6-medium col-12-small">
-                        <a href="#" class="image fit"><img src="images/jpa.png" alt=""></a>
+                    <div class="col-12 col-12-medium col-12-small">
+                        Certified Kubernetes Administrator (2024.03 취득)
                     </div>
-                    <div class="col-4 col-6-medium col-12-small">
-                        <a href="#" class="image fit"><img src="images/nodejs.png" alt=""></a>
+                    <div class="col-12 col-12-medium col-12-small">
+                        정보처리기사 필기 (2024.03 취득)
                     </div>
-                    <div class="col-4 col-6-medium col-12-small">
-                        <a href="#" class="image fit"><img src="images/html.png" alt=""></a>
+                </div>
+                <hr>
+                <h4>• Study</h4>
+                <div class="row">
+                    <div class="col-12 col-12-medium col-12-small">
+                        20.09 ~ 21.02 Backend Developer 및 Fullstack Developer 과정 / 이젠아카데미
                     </div>
-                    <div class="col-4 col-6-medium col-12-small">
-                        <a href="#" class="image fit"><img src="images/javascript.png" alt=""></a>
+                    <div class="col-12 col-12-medium col-12-small">
+                        22.12~23.2 스프링부트와 JPA 활용 / 인프런
                     </div>
-                    <div class="col-4 col-6-medium col-12-small">
-                        <a href="#" class="image fit"><img src="images/vuejs.png" alt=""></a>
+                    <div class="col-12 col-12-medium col-12-small">
+                        23.10~23.12 호돌맨의 요절복통 개발쇼 (SpringBoot, Vue.js, AWS) / 인프런
                     </div>
-                    <div class="col-4 col-6-medium col-12-small">
-                        <a href="#" class="image fit"><img src="images/mysql.png" alt=""></a>
-                    </div>
-                    <div class="col-4 col-6-medium col-12-small">
-                        <a href="#" class="image fit"><img src="images/aws.png" alt=""></a>
-                    </div>
-                    <div class="col-4 col-6-medium col-12-small">
-                        <a href="#" class="image fit"><img src="images/docker.png" alt=""></a>
-                    </div>
-                    <div class="col-4 col-6-medium col-12-small">
-                        <a href="#" class="image fit"><img src="images/kubernetes.png" alt=""></a>
-                    </div>
-                    <div class="col-4 col-6-medium col-12-small">
-                        <a href="#" class="image fit"><img src="images/git.png" alt=""></a>
+                    <div class="col-12 col-12-medium col-12-small">
+                        24.05~24.06 풀스택을 위한 도커와 최신 서버 기술(리눅스,nginx,AWS,HTTPS,flask 배포) / 인프런
                     </div>
                 </div>
             </section>
