jooq 설정 추가 및 경력기술서 추가

--- a/src/main/resources/templates/main/index.html
+++ b/src/main/resources/templates/main/index.html
@@ -96,10 +96,77 @@
             </header>
             <section>
                 <div class="row">
-                    <h4>광고 문의 인바운드 웹앱 개발 프로젝트</h4>
-                    <table>
+                    <h4>KeyWiz 키워드 메이커 웹앱 개발</h4>
+                    <div class="col-12">2023.06~2023.09</div>
+                    <div class="col-12">Java11, Spring Boot, Spring data JPA, Javascript, Selenium, Jsoup, Git</div>
+                    <div class="col-12">Backend 개발 / 기여도 40%</div>
+                    <div class="col-12">
+                        - 네이버, 다음 키워드 검색 후 해당 페이지 스크랩<br>
+                        - 스크랩 데이터 Excel 파일 업로드, 다운로드 기능 개발<br>
+                        - 셀레니움을 사용하여 동적 웹크롤링 기능 개발<br>
+                        - Thread 이용해 동시 작업 Task 개발<br>
+                        - Spring WebFlux 사용해 논블로킹 방식 크롤링 개발<br>
+                    </div>
+                    <div class="col-12">사업부서 키워드 광고 효율 데이터화 및 자료 제공</div>
+                    <div class="col-12"><a>노션 링크</a></div>
+                </div>
 
-                    </table>
+                <hr>
+
+                <div class="row">
+                    <h4>업무요청 관리 웹앱 개발 프로젝트</h4>
+                    <div class="col-12">2023.02~2023.05</div>
+                    <div class="col-12">AVA11, Spring Boot, Spring data JPA, querydsl, thymeleaf, Javascript, JQuery, BootStrap, Git</div>
+                    <div class="col-12">Backend 개발 / 기여도 100%</div>
+                    <div class="col-12">
+                        - 광고주와 대행사 간의 업무 요청을 효율적으로 진행하기 위한 웹 페이지 개발 프로젝트<br>
+                        - 공지사항 작성, 수정, 삭제 API 개발<br>
+                        - 업무요청 작성, 수정, 삭제 API 개발<br>
+                        - 업무 요청 진행 상황에 따른 코멘트 API 개발<br>
+                        - 파일 다운로드 API 개발<br>
+                        - 업무 변경 히스토리 로그 기록 서비스 개발<br>
+                        - 광고주의 업무 요청 기록을 효율적으로 처리할 수 있으며, 요청 기록을 보다 편리하게 확인하는 효율 증대 기대<br>
+                    </div>
+                    <div class="col-12">업무 요청 처리 및 미처리 요청 등 파악 및 사업부서 업무에 도움</div>
+                    <div class="col-12"><a>노션 링크</a></div>
+                </div>
+
+                <hr>
+
+                <div class="row">
+                    <h4>COMAS SELF SERVICE 프로젝트</h4>
+                    <div class="col-12">2022.07~2022.12</div>
+                    <div class="col-12">JAVA11, Spring Boot, Spring data JPA, Javascript, Vue.js, Git</div>
+                    <div class="col-12">Backend 개발 / 기여도 40%</div>
+                    <div class="col-12">
+                        - 소상공인을 위한 광고 집행 셀프 서비스 개발 프로젝트<br>
+                        - 광고 집행 결과 리포트 API 개발(Google, facebook, DSP API 호출 서비스 개발) - 결제, 환불, 예치금 관리 API 개발<br>
+                        - DSP DB 구축 및 광고주 계정 정보 관리, 리포트 API 개발<br>
+                        - 재사용 가능한 화면 컴포넌트 화<br>
+                        - 국책과제 우수 성적 통과<br>
+                    </div>
+                    <div class="col-12">국책과제 최종 보고 및 테스트 통과</div>
+                    <div class="col-12"><a>노션 링크</a></div>
+                </div>
+
+                <hr>
+
+                <div class="row">
+                    <h4>광고 문의 인바운드 웹앱 개발 프로젝트</h4>
+                    <div class="col-12">2021.12~2022.05</div>
+                    <div class="col-12">JAVA11, Spring Boot, Spring data JPA, querydsl, thymeleaf. Javascript, JQeuery, Ukit, Git</div>
+                    <div class="col-12">Backend 개발 / 기여도 60%</div>
+                    <div class="col-12">
+                        - 신규 광고 집행을 위한 광고 문의 인바운드 웹앱 개발<br>
+                        - JPA 를 활용한 광고 요청, 수정 API 개발<br>
+                        - 신규 광고 문의 관리하는 백오피스(어드민) 페이지 개발<br>
+                        - 신규 광고 문의, 문의 답변 지연시 메일 발송 스케쥴러 개발<br>
+                        - 광고 집행을 위한 광고주의 광고 신규 문의 상담이 진행될 수 있도록 사업부서와 협의하여 UI 변경 및 유지 보수 진행<br>
+                        - 신규 광고 문의 내용 기록 및 광고 문의량 증가로 신규 광고 수주율 증가<br>
+                        - 코드 개선 수행<br>
+                    </div>
+                    <div class="col-12">신규 광고 문의 유입률 증가 및 소규모 기업 광고 수주율 증가</div>
+                    <div class="col-12"><a>노션 링크</a></div>
                 </div>
             </section>
         </article>
