프로젝트 내용 노션 연결

--- a/src/main/resources/templates/main/index.html
+++ b/src/main/resources/templates/main/index.html
@@ -101,14 +101,15 @@
                     <div class="col-12">Java11, Spring Boot, Spring data JPA, Javascript, Selenium, Jsoup, Git</div>
                     <div class="col-12">Backend 개발 / 기여도 40%</div>
                     <div class="col-12">
-                        - 네이버, 다음 키워드 검색 후 해당 페이지 스크랩<br>
-                        - 스크랩 데이터 Excel 파일 업로드, 다운로드 기능 개발<br>
-                        - 셀레니움을 사용하여 동적 웹크롤링 기능 개발<br>
+                        - 크롤링 할 키워드 Excel 파일 업로드 개발<br>
+                        - 네이버, 다음 키워드 검색 후 해당 페이지 크롤링<br>
+                        - 크롤링 데이터 Excel 다운로드 기능 개발<br>
+                        - 셀레니움,Jsoup을 사용하여 동적 웹크롤링 기능 개발<br>
                         - Thread 이용해 동시 작업 Task 개발<br>
                         - Spring WebFlux 사용해 논블로킹 방식 크롤링 개발<br>
                     </div>
                     <div class="col-12">사업부서 키워드 광고 효율 데이터화 및 자료 제공</div>
-                    <div class="col-12"><a>노션 링크</a></div>
+                    <div class="col-12"><a href="https://childish-epoch-cad.notion.site/Keywiz-ce2accb85fe74574a19c2c312b7a1d7b?pvs=4" target="_blank">프로젝트 상세 내역 보러 가기</a></div>
                 </div>
 
                 <hr>
@@ -128,7 +129,7 @@
                         - 광고주의 업무 요청 기록을 효율적으로 처리할 수 있으며, 요청 기록을 보다 편리하게 확인하는 효율 증대 기대<br>
                     </div>
                     <div class="col-12">업무 요청 처리 및 미처리 요청 등 파악 및 사업부서 업무에 도움</div>
-                    <div class="col-12"><a>노션 링크</a></div>
+                    <div class="col-12"><a href="https://childish-epoch-cad.notion.site/Work-Manager-Project-da252b142d2c4a4b8ea5ea80870d1ea5?pvs=74" target="_blank">프로젝트 상세 내역 보러 가기</a></div>
                 </div>
 
                 <hr>
@@ -140,13 +141,14 @@
                     <div class="col-12">Backend 개발 / 기여도 40%</div>
                     <div class="col-12">
                         - 소상공인을 위한 광고 집행 셀프 서비스 개발 프로젝트<br>
-                        - 광고 집행 결과 리포트 API 개발(Google, facebook, DSP API 호출 서비스 개발) - 결제, 환불, 예치금 관리 API 개발<br>
-                        - DSP DB 구축 및 광고주 계정 정보 관리, 리포트 API 개발<br>
+                        - 광고 집행 결과 리포트 API 개발<br>
+                        - 외부 API 연동(Google, facebook, DSP API 호출 서비스 개발) <br>
+                        - 광고주 계정 정보, 결제, 환불, 예치금 관리 API 개발<br>
+                        - DSP DB 구축<br>
                         - 재사용 가능한 화면 컴포넌트 화<br>
-                        - 국책과제 우수 성적 통과<br>
                     </div>
                     <div class="col-12">국책과제 최종 보고 및 테스트 통과</div>
-                    <div class="col-12"><a>노션 링크</a></div>
+                    <div class="col-12"><a href="https://childish-epoch-cad.notion.site/COMAS-SELF-SERVICE-fa4bc06054134a3abbe7df615a3526c5?pvs=4" target="_blank">프로젝트 상세 내역 보러 가기</a></div>
                 </div>
 
                 <hr>
@@ -160,13 +162,13 @@
                         - 신규 광고 집행을 위한 광고 문의 인바운드 웹앱 개발<br>
                         - JPA 를 활용한 광고 요청, 수정 API 개발<br>
                         - 신규 광고 문의 관리하는 백오피스(어드민) 페이지 개발<br>
+                        - 파일 업로드, 다운로드 API 개발<br>
                         - 신규 광고 문의, 문의 답변 지연시 메일 발송 스케쥴러 개발<br>
                         - 광고 집행을 위한 광고주의 광고 신규 문의 상담이 진행될 수 있도록 사업부서와 협의하여 UI 변경 및 유지 보수 진행<br>
-                        - 신규 광고 문의 내용 기록 및 광고 문의량 증가로 신규 광고 수주율 증가<br>
                         - 코드 개선 수행<br>
                     </div>
                     <div class="col-12">신규 광고 문의 유입률 증가 및 소규모 기업 광고 수주율 증가</div>
-                    <div class="col-12"><a>노션 링크</a></div>
+                    <div class="col-12"><a href="https://childish-epoch-cad.notion.site/374dfa0fa52b49a1a42ba5df20147cba?pvs=4" target="_blank">프로젝트 상세 내역 보러 가기</a></div>
                 </div>
             </section>
         </article>
