오타 수정 및 css 변경

--- a/src/main/resources/templates/main/index.html
+++ b/src/main/resources/templates/main/index.html
@@ -96,8 +96,8 @@
             </header>
             <section>
                 <div class="row">
-                    <h4>KeyWiz 키워드 메이커 웹앱 개발</h4>
-                    <div class="col-12">2023.06~2023.09</div>
+                    <h4 class="col-6">KeyWiz 키워드 메이커 웹앱 개발</h4>
+                    <div class="col-6">2023.06~2023.09</div>
                     <div class="col-12">Java11, Spring Boot, Spring data JPA, Javascript, Selenium, Jsoup, Git</div>
                     <div class="col-12">Backend 개발 / 기여도 40%</div>
                     <div class="col-12">
@@ -109,15 +109,15 @@
                         - Spring WebFlux 사용해 논블로킹 방식 크롤링 개발<br>
                     </div>
                     <div class="col-12">사업부서 키워드 광고 효율 데이터화 및 자료 제공</div>
-                    <div class="col-12"><a href="https://childish-epoch-cad.notion.site/Keywiz-ce2accb85fe74574a19c2c312b7a1d7b?pvs=4" target="_blank">프로젝트 상세 내역 보러 가기</a></div>
+                    <div class="col-12 "><a href="https://childish-epoch-cad.notion.site/Keywiz-ce2accb85fe74574a19c2c312b7a1d7b?pvs=4" target="_blank">프로젝트 상세 내역 보러 가기</a></div>
                 </div>
 
                 <hr>
 
                 <div class="row">
-                    <h4>업무요청 관리 웹앱 개발 프로젝트</h4>
-                    <div class="col-12">2023.02~2023.05</div>
-                    <div class="col-12">AVA11, Spring Boot, Spring data JPA, querydsl, thymeleaf, Javascript, JQuery, BootStrap, Git</div>
+                    <h4 class="col-6">업무요청 관리 웹앱 개발 프로젝트</h4>
+                    <div class="col-6">2023.02~2023.05</div>
+                    <div class="col-12">JAVA11, Spring Boot, Spring data JPA, querydsl, thymeleaf, Javascript, JQuery, BootStrap, Git</div>
                     <div class="col-12">Backend 개발 / 기여도 100%</div>
                     <div class="col-12">
                         - 광고주와 대행사 간의 업무 요청을 효율적으로 진행하기 위한 웹 페이지 개발 프로젝트<br>
@@ -135,8 +135,8 @@
                 <hr>
 
                 <div class="row">
-                    <h4>COMAS SELF SERVICE 프로젝트</h4>
-                    <div class="col-12">2022.07~2022.12</div>
+                    <h4 class="col-6">COMAS SELF SERVICE 프로젝트</h4>
+                    <div class="col-6">2022.07~2022.12</div>
                     <div class="col-12">JAVA11, Spring Boot, Spring data JPA, Javascript, Vue.js, Git</div>
                     <div class="col-12">Backend 개발 / 기여도 40%</div>
                     <div class="col-12">
@@ -154,8 +154,8 @@
                 <hr>
 
                 <div class="row">
-                    <h4>광고 문의 인바운드 웹앱 개발 프로젝트</h4>
-                    <div class="col-12">2021.12~2022.05</div>
+                    <h4 class="col-6">광고 문의 인바운드 웹앱 개발 프로젝트</h4>
+                    <div class="col-6">2021.12~2022.05</div>
                     <div class="col-12">JAVA11, Spring Boot, Spring data JPA, querydsl, thymeleaf. Javascript, JQeuery, Ukit, Git</div>
                     <div class="col-12">Backend 개발 / 기여도 60%</div>
                     <div class="col-12">
